feat : 아카이브 명 검색 기능 구현